--- a/templates/student/apply_leave.html
+++ b/templates/student/apply_leave.html
@@ -37,9 +37,10 @@
                                     <label for="exampleInputConfirmPassword1">Reason</label>
                                     <textarea name="reason" class="form-control"  placeholder="Enter your reason" rows="5"></textarea>
                                 </div>
-                                
-                                <button type="submit" class="btn btn-primary me-2">Submit</button>
-                                <button type="reset" class="btn btn-light">Cancel</button>
+                                <div class="text-center mt-4">
+                                    <button type="submit" class="btn btn-primary me-2">Submit</button>
+                                    <button type="reset" class="btn btn-light">Cancel</button>
+                                </div>
                             </form>
                         </div>
                     </div>
