--- a/templates/student/leave_status.html
+++ b/templates/student/leave_status.html
@@ -5,36 +5,61 @@
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
-            <h4 class="card-title">Leave Status</h4><br>
-                  
-                  </p>
-                  <div class="table-responsive">
-                            <table class="table table-bordered table-striped table-hover text-center" >
-                                <thead>
-                                    <tr>
-                                        <th>Applied On</th>
-                                        <th>Type</th>
-                                        <th>Dates</th>
-                                        <th>Reason</th>
-                                        <th>Status</th>
-                                        
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for i in leaves %}
-                                    <tr>
-                                        <td>{{ i.applied_on }}</td>
-                                        <td>{{ i.leave_type }}</td>
-                                        <td>{{ i.start_date }} to {{ i.end_date }}</td>
-                                        <td>{{ i.reason }}</td>
-                                        <td><button  class="btn btn-success me-2 ">{{ i.status }}</button></td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-            
+            <div class="row justify-content-center">
+                <div class="col-md-12 grid-margin stretch-card">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title text-center mb-4">Leave Status</h4><br>
+                            <hr>
+                            </p>
+                            <div class="table-responsive">
+                                {% if leaves %}
+                                <table class="table table-striped table-borderless text-center">
+                                    <thead>
+                                        <tr>
+                                            <th>Applied On</th>
+                                            <th>Type</th>
+                                            <th>Dates</th>
+                                            <th>Reason</th>
+                                            <th>Status</th>
 
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for i in leaves %}
+                                        <tr>
+                                            <td>{{ i.applied_on }}</td>
+                                            <td>{{ i.leave_type }}</td>
+                                            <td>{{ i.start_date }} to {{ i.end_date }}</td>
+                                            <td>{{ i.reason }}</td>
+                                            <td>
+                                                {% if i.status == "Pending" %}
+                                                <button class="btn btn-warning me-2">{{ i.status }}</button>
+                                                {% elif i.status == "Approve" %}
+                                                <button class="btn btn-success me-2">{{ i.status }}</button>
+                                                {% elif i.status == "Reject" %}
+                                                <button class="btn btn-danger me-2">{{ i.status }}</button>
+                                                {% else %}
+                                                <button class="btn btn-secondary me-2">{{ i.status }}</button>
+                                                {% endif %}
+                                            </td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                                {% else %}
+                                <div class="text-center">
+                                    <h5 class="text-muted">No leave applications found</h5>
+                                    <p class="text-muted">You haven't applied for any leave yet.</p>
+                                </div>
+                                {% endif %}
+                            </div>
+
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
